Fix message dialog width and height on recent Gtk

The fix for Zenity bug 670496 "Zenity info/error windows grow in height
with message length"
(https://bugzilla.gnome.org/show_bug.cgi?id=670496) stopped working on
recent Gtk, which doesn't seem to honor gtk_widget_set_size_request.
This commit workarounds Gtk bug 657621 "Calculate the wrong height of
labels wrapping on words"
(https://bugzilla.gnome.org/show_bug.cgi?id=657621) by setting label's
width-chars and max-width-chars to 60. This magic number was picked from
GtkMessageDialog source
(https://git.gnome.org/browse/gtk+/tree/gtk/ui/gtkmessagedialog.ui#n48).